Fixed typo in path

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "trex_path": "C:\\Users\\ingar\\Documents\\Mining\t-rex.exe",
+    "trex_path": "C:\\Users\\ingar\\Documents\\Mining\\t-rex.exe",
     "ab_indexing": false,
     "algo": "ethash",
     "api_bind_http": "127.0.0.1:4067",
