--- a/config.json
+++ b/config.json
@@ -1,5 +1,8 @@
 {
-    "trex_path": "C:\\Users\\ingar\\Documents\\Mining\\t-rex.exe",
+    "trex_path": "path_to_trex_executable",
+    "trex_log": "path_to_trex_log",
+    "refreshRate": 3,
+    "idleTimeReq": 10,
     "ab_indexing": false,
     "algo": "ethash",
     "api_bind_http": "127.0.0.1:4067",
